--- a/src/css/common.css
+++ b/src/css/common.css
@@ -30,7 +30,7 @@ body {
   cursor: default;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 0.9em;
   height: 100vh;
